--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,8 +16,8 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 #view-root > .view > .view-interior {
   min-width: 100%;
