--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -80,6 +80,11 @@ h1 {
   padding: 5px 5px;
   background-color: #f5f5f5;
 }
+.no-lavaca {
+  text-align: center;
+  margin-top: 16px;
+  font-size: 12px
+}
 .string { color: green; }
 .number { color: darkorange; }
 .boolean { color: blue; }
